# mojawave-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: live_smoketest.py
src/mojawave_mcp/: __init__.py  client.py  server.py  validation.py  webhooks.py
tests/: test_client.py  test_validation_and_webhooks.py
